yaml/traefik-ingress-demo/ingress.yaml
kind: Middleware
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: path-prefix
  namespace: traefik-ingress-demo
spec:
  stripPrefix:
    prefixes:
      - /play
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: middleware-test
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-ingress-demo-path-prefix@kubernetescrd
spec:
  rules:
  - host: testing.test.io
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 8080
        path: /
        pathType: Exact
